--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,go
